--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.2",
     "axios": "^0.18.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-json-table": "^0.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-table": "^6.8.6",
